# cargo-describe

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cfg.rs  compiler.rs  lib.rs  manifest.rs  rustc.rs
src/manifest/: compiler.rs  mod.rs
test_cases/basic/: Cargo.toml
test_cases/custom_name/: Cargo.toml
test_cases/features/: Cargo.toml
test_cases/not/: Cargo.toml
