[package]
name = "compiler-support"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Set configure flags based on rustc versions or supported features, from Cargo.toml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-expr = { version = "~0.14", features = ["targets"] }
lazy_static = "~1.4.0"
semver = { version = "~1.0.20", features = ["serde"] }
serde = { version = "~1.0.189", features = [ "derive" ] }
toml = "~0.8"

[dev-dependencies]
temp-env = "~0.3.6"

[features]
default = ["compiler_checks"]
compiler_checks = []
cfg_checks = []
